--- a/logistic-regression/model.ipynb
+++ b/logistic-regression/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,22 +21,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "data = pd.read_csv('SVMtrain.csv')\n",
     "\n",
+    "# Get rid of unique identifier column\n",
+    "data = data.drop('PassengerId', axis=1)\n",
+    "\n",
     "# One-hot encoding for 'Sex' column\n",
     "encoded = pd.get_dummies(data, columns=['Sex'])\n",
     "\n",
     "# Split into training and testing data\n",
-    "train = data.sample(frac=0.8, random_state=200)\n",
-    "test = data.drop(train.index)\n",
+    "train = encoded.sample(frac=0.8, random_state=200)\n",
+    "test = encoded.drop(train.index)\n",
     "\n",
     "# Separate features (x) from target variables (y)\n",
     "train_x, train_y = train.drop('Survived', axis=1), train['Survived']\n",
     "test_x, test_y = train.drop('Survived', axis=1), train['Survived']"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_x, train_y = train_x.astype(float), train_y.astype(float)\n",
+    "test_x, test_y = test_x.astype(float), test_y.astype(float)\n",
+    "\n",
+    "train_x_tensor = torch.tensor(train_x.values, dtype=torch.float32)\n",
+    "train_y_tensor = torch.tensor(train_y.values, dtype=torch.float32)\n",
+    "test_x_tensor = torch.tensor(test_x.values, dtype=torch.float32)\n",
+    "test_y_tensor = torch.tensor(test_y.values, dtype=torch.float32)\n",
+    "\n",
+    "input_size = train_x_tensor.shape[1]\n",
+    "\n",
+    "# Define the model\n",
+    "model = nn.Sequential(\n",
+    "    nn.Linear(input_size, 1),\n",
+    "    nn.Sigmoid()\n",
+    ")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Train the model"
    ]
   },
   {
