--- a/decision-tree/tree-testing.ipynb
+++ b/decision-tree/tree-testing.ipynb
@@ -7,7 +7,39 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from tree import Tree"
+    "from tree import Tree, Node"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_data = np.array([\n",
+    "    [1, 3, 2, 0],   # class 0\n",
+    "    [3, 1, 4, 0],   # class 0\n",
+    "    [2, 2, 1, 1],   # class 1\n",
+    "    [4, 3, 2, 1],   # class 1\n",
+    "    [1, 4, 3, 0],   # class 0\n",
+    "    [2, 2, 4, 1],   # class 1\n",
+    "    [3, 1, 1, 0],   # class 0\n",
+    "    [4, 4, 4, 1],   # class 1\n",
+    "])\n",
+    "\n",
+    "X = test_data[:, :3]\n",
+    "y = test_data[:, 3:]\n",
+    "\n",
+    "myTree = Tree(X, y, 5, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "myTree.build_tree(myTree.root)"
    ]
   },
   {
