import dataset, train model

--- a/decision-tree/tree-testing.ipynb
+++ b/decision-tree/tree-testing.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import pandas as pd\n",
     "from tree import Tree, Node"
    ]
   },
@@ -16,51 +17,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_data = np.array([\n",
-    "    [1, 3, 2, 0],   # class 0\n",
-    "    [3, 1, 4, 0],   # class 0\n",
-    "    [2, 2, 1, 1],   # class 1\n",
-    "    [4, 3, 2, 1],   # class 1\n",
-    "    [1, 4, 3, 0],   # class 0\n",
-    "    [2, 2, 4, 1],   # class 1\n",
-    "    [3, 1, 1, 0],   # class 0\n",
-    "    [4, 4, 4, 1],   # class 1\n",
-    "])\n",
-    "\n",
-    "X = test_data[:, :3]\n",
-    "y = test_data[:, 3:]\n",
-    "\n",
-    "myTree = Tree(X, y, 5, 2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "myTree.build_tree(myTree.root)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x = np.array([[4, 4, 4]])\n",
-    "myTree.make_prediction(x)"
+    "# Read csv\n",
+    "data_df = pd.read_csv(\"Iris.csv\")\n",
+    "# One-hot encoding, as this is required by the model\n",
+    "data_encoded = pd.get_dummies(data_df, columns=['Species'])\n",
+    "# Split into training, validation, and test sets\n",
+    "train_df, validate_test_df = pd.train_test_split(data_encoded, test_size=.25, random_state=5)\n",
+    "validate_df, test_df = pd.train_test_split(validate_test_df, test_size=.5, random_state=21)\n",
+    "# Convert to numpy arrays\n",
+    "train = train_df.values\n",
+    "validate = validate_df.values\n",
+    "test = test_df.values\n",
+    "# Split features from labels\n",
+    "X_train, Y_train = train[:, 1:5], train[:, 5:]\n",
+    "X_val, Y_val = validate[:, 1:5], validate[:, 5:]\n",
+    "X_test, Y_test = test[:, 1:5], test[:, 5:]"
    ]
   },
   {
@@ -68,7 +39,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Train the model\n",
+    "myTree = Tree(X_train, Y_train, 5, 5)\n",
+    "myTree.build_tree(myTree.root)"
+   ]
   }
  ],
  "metadata": {
