--- a/decision-tree/tree-testing.ipynb
+++ b/decision-tree/tree-testing.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
        "2"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,40 +72,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[True, False, False],\n",
-       "       [True, False, False],\n",
-       "       [False, True, False],\n",
-       "       [True, False, False],\n",
-       "       [True, False, False],\n",
-       "       [False, False, True],\n",
-       "       [False, True, False],\n",
-       "       [True, False, False],\n",
-       "       [False, False, True],\n",
-       "       [True, False, False],\n",
-       "       [False, True, False],\n",
-       "       [False, False, True],\n",
-       "       [False, False, True],\n",
-       "       [False, False, True],\n",
-       "       [True, False, False],\n",
-       "       [False, True, False],\n",
-       "       [False, False, True],\n",
-       "       [True, False, False],\n",
-       "       [False, False, True]], dtype=object)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Percentage of correct classifications: 84.21052631578947%\n"
+     ]
     }
    ],
    "source": [
-    "Y_val"
+    "myTree.check_accuracy(X_test, Y_test)"
    ]
   },
   {
