--- a/decision-tree/tree-testing.ipynb
+++ b/decision-tree/tree-testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,18 +40,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Train the model\n",
-    "myTree = Tree(X_train, Y_train, 8, 5)\n",
+    "myTree = Tree(X_train, Y_train, 3, 5)\n",
     "myTree.build_tree(myTree.root)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
        "2"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,14 +72,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Percentage of correct classifications: 84.21052631578947%\n"
+      "Percentage of correct classifications: 89.47368421052632%\n"
      ]
     }
    ],
@@ -88,11 +88,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "So far I've found a max depth of 3 and minimum samples per split of 5 or higher to lead to the highest accuracy. However, I primarily\n",
+    "just wanted to implement a model that works and I'm not worried about finding the best values for the hyperparameters"
+   ]
   }
  ],
  "metadata": {
