--- a/decision-tree/numpy-testing.ipynb
+++ b/decision-tree/numpy-testing.ipynb
@@ -7,7 +7,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,53 +16,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = np.array([[2,3,5],[5,8,3],[1,4,2]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[2, 3, 5],\n",
-       "       [5, 8, 3],\n",
-       "       [1, 4, 2]])"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3, 3)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x.shape"
+    "features = np.array([[5.1, 3.5, 1.4, 0.2],\n",
+    "                     [4.9, 3.0, 1.4, 0.2],\n",
+    "                     [6.2, 3.4, 5.4, 2.3],\n",
+    "                     [5.9, 3.0, 5.1, 1.8]])\n",
+    "\n",
+    "labels = np.array([[0, 1, 0],\n",
+    "                   [0, 1, 0],\n",
+    "                   [1, 0, 0],\n",
+    "                   [1, 0, 0]])"
    ]
   },
   {
@@ -71,8 +37,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = x[:2, :]\n",
-    "z = x[2:, :]"
+    "sorted_indices = np.argsort(features[:, 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [0, 1, 0]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted_labels = labels[sorted_indices]\n",
+    "sorted_labels"
    ]
   },
   {
@@ -83,9 +72,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[2, 3, 5],\n",
-       "       [5, 8, 3],\n",
-       "       [1, 4, 2]])"
+       "array([[0, 1, 0],\n",
+       "       [1, 0, 0]])"
       ]
      },
      "execution_count": 8,
@@ -94,48 +82,7 @@
     }
    ],
    "source": [
-    "x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[2, 3, 5],\n",
-       "       [5, 8, 3]])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1, 4, 2]])"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "z"
+    "sorted_labels[:2]"
    ]
   },
   {
